# SciResearch-kdense

./: .gitignore  AGENTS.md  Dockerfile  README.md  fetch_venice.py  litellm_callbacks.py  litellm_config.yaml  pyproject.toml  server.py  supervisord.conf
checks/: test_tracking_contract.py
docs/: architecture.md  custom-mcp-servers.md  limitations.md  local-models-ollama.md  model-selection.md
kady_agent/: agent.py  cost_ledger.py  env.example  mcp.py  projects.py  runtime.py  tracking.py  utils.py
kady_agent/api/: __init__.py  revision.py  runs.py  sandbox.py  settings.py  system.py
kady_agent/instructions/: gemini_cli.md  main_agent.md
kady_agent/mcp_servers/: pdf_annotations.py
kady_agent/tools/: gemini_cli.py
tests/: conftest.py  test_agent_callbacks.py  test_gemini_cli.py  test_litellm_callbacks.py  test_manifest_runtime.py  test_mcp_settings.py  test_runs_api.py  test_runtime_tracking.py  test_settings_system_api.py  test_utils_models.py
tests/e2e/: test_live_agent_e2e.py
web/: next.config.ts  vitest.setup.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: chat-tab.tsx  context-chips.tsx  file-icon.tsx  file-preview-panel.tsx  sandbox-panel.tsx  session-cost-pill.tsx  settings-dialog.tsx
web/src/components/ai-elements/: message.tsx
web/src/components/chat/: budget-banner.tsx
web/src/data/: models.json
web/src/lib/: format.ts  provenance.ts  tree.ts  use-agent-events.test.ts  use-agent.ts  use-panel-resize.ts  use-sandbox.ts  use-settings.ts  utils.ts
