[project]
name = "kady"
version = "0.4.6"
description = "Kady — K-Dense BYOK Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anndata>=0.12.10",
    "fastapi>=0.136.0",
    "google-adk[extensions]>=1.31.0",
    "h5py>=3.16.0",
    "litellm[proxy]>=1.82.6,<1.83",
    "markitdown[all]>=0.1.5",
    "matplotlib>=3.10.8",
    "mcp>=1.27.0",
    "modal>=1.4.2",
    "openrouter>=0.9.1",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "uvicorn>=0.44.0",
]

[project.scripts]
kady-pdf-annotations-mcp = "kady_agent.mcp_servers.pdf_annotations:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "freezegun>=1.5.5",
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "playwright>=1.59.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
markers = [
    "integration: end-to-end FastAPI / multi-module tests",
    "live_e2e: requires live LLM/API services",
    "browser: requires Playwright and Chromium",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["kady_agent", "server", "litellm_callbacks", "prep_sandbox"]
omit = [
    "kady_agent/mcp_servers/*",
    "kady_agent/_version.py",
]
branch = false

[tool.coverage.report]
skip_empty = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
